# ParsingWebData

./: .env.sample  .gitignore  WebParsing.py  config.py  outputdatacollection.csv  pyproject.toml  test_module.py
files/: output_data_collection.csv
src/: WebParsing.py  config.py  env.py  env.sample  main.py  outputdatacollection.csv  parser.py
src/core/: crawler.py  parser.py
src/files/: output_data_collection.csv
